compilers/llvm-c-compiler/antlr/.antlr/ExprParser.java
// Generated from /home/yashas/Desktop/compiler/minic-grammar-YashasSamaga/antlr/Expr.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, EXTERN=33, IF=34, ELSE=35, FOR=36, WHILE=37, CONTINUE=38, BREAK=39, 
		RETURN=40, SIGNED=41, UNSIGNED=42, INT=43, CHAR=44, BOOL=45, FLOAT=46, 
		VOID=47, STATIC_CAST=48, TRUE=49, FALSE=50, IDENT=51, COMMENT=52, NS=53, 
		FLOAT_LITERAL=54, INTEGER_LITERAL=55, CHARACTER_LITERAL=56, STRING_LITERAL=57;
	public static final int
		RULE_translationUnit = 0, RULE_declaration = 1, RULE_variableDeclaration = 2, 
		RULE_initDeclarator = 3, RULE_initializer = 4, RULE_functionDeclaration = 5, 
		RULE_functionDefinition = 6, RULE_functionPrototype = 7, RULE_formalParameterList = 8, 
		RULE_formalParameter = 9, RULE_arrayDimensionList = 10, RULE_statement = 11, 
		RULE_compoundStatement = 12, RULE_expressionStatement = 13, RULE_ifStatement = 14, 
		RULE_forStatement = 15, RULE_forDeclaration = 16, RULE_whileStatement = 17, 
		RULE_primaryExpression = 18, RULE_idExpression = 19, RULE_postfixExpression = 20, 
		RULE_argumentExpressionList = 21, RULE_prefixExpression = 22, RULE_multiplicativeExpression = 23, 
		RULE_additiveExpression = 24, RULE_relationalExpression = 25, RULE_equalityExpression = 26, 
		RULE_logicalAndExpression = 27, RULE_logicalOrExpression = 28, RULE_conditionalExpression = 29, 
		RULE_assignmentExpression = 30, RULE_expr = 31, RULE_constantExpression = 32, 
		RULE_type = 33, RULE_typemodifier = 34, RULE_type_name = 35, RULE_literal = 36, 
		RULE_singleLiteral = 37, RULE_boolLiteral = 38, RULE_arrayLiteral = 39, 
		RULE_arrayLiteralList = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "declaration", "variableDeclaration", "initDeclarator", 
			"initializer", "functionDeclaration", "functionDefinition", "functionPrototype", 
			"formalParameterList", "formalParameter", "arrayDimensionList", "statement", 
			"compoundStatement", "expressionStatement", "ifStatement", "forStatement", 
			"forDeclaration", "whileStatement", "primaryExpression", "idExpression", 
			"postfixExpression", "argumentExpressionList", "prefixExpression", "multiplicativeExpression", 
			"additiveExpression", "relationalExpression", "equalityExpression", "logicalAndExpression", 
			"logicalOrExpression", "conditionalExpression", "assignmentExpression", 
			"expr", "constantExpression", "type", "typemodifier", "type_name", "literal", 
			"singleLiteral", "boolLiteral", "arrayLiteral", "arrayLiteralList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "';'", "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'<'", "'>'", "'++'", "'--'", "'+'", "'-'", "'!'", "'*'", "'/'", "'%'", 
			"'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'?'", "':'", "'*='", 
			"'/='", "'%='", "'+='", "'-='", "'extern'", "'if'", "'else'", "'for'", 
			"'while'", "'continue'", "'break'", "'return'", "'signed'", "'unsigned'", 
			"'int'", "'char'", "'bool'", "'float'", "'void'", "'static_cast'", "'true'", 
			"'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "EXTERN", "IF", 
			"ELSE", "FOR", "WHILE", "CONTINUE", "BREAK", "RETURN", "SIGNED", "UNSIGNED", 
			"INT", "CHAR", "BOOL", "FLOAT", "VOID", "STATIC_CAST", "TRUE", "FALSE", 
			"IDENT", "COMMENT", "NS", "FLOAT_LITERAL", "INTEGER_LITERAL", "CHARACTER_LITERAL", 
			"STRING_LITERAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TranslationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXTERN) | (1L << SIGNED) | (1L << UNSIGNED) | (1L << INT) | (1L << CHAR) | (1L << BOOL) | (1L << FLOAT) | (1L << VOID))) != 0)) {
				{
				{
				setState(82);
				declaration();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				functionDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				functionDefinition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<InitDeclaratorContext> initDeclarator() {
			return getRuleContexts(InitDeclaratorContext.class);
		}
		public InitDeclaratorContext initDeclarator(int i) {
			return getRuleContext(InitDeclaratorContext.class,i);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			type();
			setState(96);
			initDeclarator();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(97);
				match(T__0);
				setState(98);
				initDeclarator();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitDeclaratorContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ExprParser.IDENT, 0); }
		public ArrayDimensionListContext arrayDimensionList() {
			return getRuleContext(ArrayDimensionListContext.class,0);
		}
		public InitializerContext initializer() {
			return getRuleContext(InitializerContext.class,0);
		}
		public InitDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initDeclarator; }
	}

	public final InitDeclaratorContext initDeclarator() throws RecognitionException {
		InitDeclaratorContext _localctx = new InitDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_initDeclarator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(IDENT);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(107);
				arrayDimensionList();
				}
			}

			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(110);
				initializer();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitializerContext extends ParserRuleContext {
		public ConditionalExpressionContext conditionalExpression() {
			return getRuleContext(ConditionalExpressionContext.class,0);
		}
		public InitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initializer; }
	}

	public final InitializerContext initializer() throws RecognitionException {
		InitializerContext _localctx = new InitializerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_initializer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__2);
			setState(114);
			conditionalExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public FunctionPrototypeContext functionPrototype() {
			return getRuleContext(FunctionPrototypeContext.class,0);
		}
		public TerminalNode EXTERN() { return getToken(ExprParser.EXTERN, 0); }
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTERN) {
				{
				setState(116);
				match(EXTERN);
				}
			}

			setState(119);
			functionPrototype();
			setState(120);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionPrototypeContext functionPrototype() {
			return getRuleContext(FunctionPrototypeContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			functionPrototype();
			setState(123);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionPrototypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(ExprParser.IDENT, 0); }
		public FormalParameterListContext formalParameterList() {
			return getRuleContext(FormalParameterListContext.class,0);
		}
		public FunctionPrototypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionPrototype; }
	}

	public final FunctionPrototypeContext functionPrototype() throws RecognitionException {
		FunctionPrototypeContext _localctx = new FunctionPrototypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionPrototype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			type();
			setState(126);
			match(IDENT);
			setState(127);
			match(T__3);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SIGNED) | (1L << UNSIGNED) | (1L << INT) | (1L << CHAR) | (1L << BOOL) | (1L << FLOAT) | (1L << VOID))) != 0)) {
				{
				setState(128);
				formalParameterList();
				}
			}

			setState(131);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParameterListContext extends ParserRuleContext {
		public List<FormalParameterContext> formalParameter() {
			return getRuleContexts(FormalParameterContext.class);
		}
		public FormalParameterContext formalParameter(int i) {
			return getRuleContext(FormalParameterContext.class,i);
		}
		public FormalParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParameterList; }
	}

	public final FormalParameterListContext formalParameterList() throws RecognitionException {
		FormalParameterListContext _localctx = new FormalParameterListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_formalParameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			formalParameter();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(134);
				match(T__0);
				setState(135);
				formalParameter();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParameterContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(ExprParser.IDENT, 0); }
		public ArrayDimensionListContext arrayDimensionList() {
			return getRuleContext(ArrayDimensionListContext.class,0);
		}
		public FormalParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParameter; }
	}

	public final FormalParameterContext formalParameter() throws RecognitionException {
		FormalParameterContext _localctx = new FormalParameterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_formalParameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			type();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(142);
				match(IDENT);
				}
			}

			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(145);
				arrayDimensionList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDimensionListContext extends ParserRuleContext {
		public List<ConstantExpressionContext> constantExpression() {
			return getRuleContexts(ConstantExpressionContext.class);
		}
		public ConstantExpressionContext constantExpression(int i) {
			return getRuleContext(ConstantExpressionContext.class,i);
		}
		public ArrayDimensionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDimensionList; }
	}

	public final ArrayDimensionListContext arrayDimensionList() throws RecognitionException {
		ArrayDimensionListContext _localctx = new ArrayDimensionListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_arrayDimensionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(148);
				match(T__5);
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__7) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << STATIC_CAST) | (1L << TRUE) | (1L << FALSE) | (1L << IDENT) | (1L << FLOAT_LITERAL) | (1L << INTEGER_LITERAL) | (1L << CHARACTER_LITERAL) | (1L << STRING_LITERAL))) != 0)) {
					{
					setState(149);
					constantExpression();
					}
				}

				setState(152);
				match(T__6);
				}
				}
				setState(155); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__5 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CompoundStatementStatContext extends StatementContext {
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public CompoundStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnStatementStatContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(ExprParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class EmptyStatementStatContext extends StatementContext {
		public EmptyStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class WhileStatementStatContext extends StatementContext {
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public WhileStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ForStatementStatContext extends StatementContext {
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public ForStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ExprStatementStatContext extends StatementContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public ExprStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BreakStatementStatContext extends StatementContext {
		public TerminalNode BREAK() { return getToken(ExprParser.BREAK, 0); }
		public BreakStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class IfStatementStatContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class VarDeclarationStatementContext extends StatementContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public VarDeclarationStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ContinueStatementStatContext extends StatementContext {
		public TerminalNode CONTINUE() { return getToken(ExprParser.CONTINUE, 0); }
		public ContinueStatementStatContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		int _la;
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new CompoundStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				compoundStatement();
				}
				break;
			case 2:
				_localctx = new ExprStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				expressionStatement();
				}
				break;
			case 3:
				_localctx = new EmptyStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(159);
				match(T__1);
				}
				break;
			case 4:
				_localctx = new IfStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(160);
				ifStatement();
				}
				break;
			case 5:
				_localctx = new ForStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(161);
				forStatement();
				}
				break;
			case 6:
				_localctx = new WhileStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(162);
				whileStatement();
				}
				break;
			case 7:
				_localctx = new ReturnStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(163);
				match(RETURN);
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__7) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << STATIC_CAST) | (1L << TRUE) | (1L << FALSE) | (1L << IDENT) | (1L << FLOAT_LITERAL) | (1L << INTEGER_LITERAL) | (1L << CHARACTER_LITERAL) | (1L << STRING_LITERAL))) != 0)) {
					{
					setState(164);
					expr();
					}
				}

				setState(167);
				match(T__1);
				}
				break;
			case 8:
				_localctx = new ContinueStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(168);
				match(CONTINUE);
				setState(169);
				match(T__1);
				}
				break;
			case 9:
				_localctx = new BreakStatementStatContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(170);
				match(BREAK);
				setState(171);
				match(T__1);
				}
				break;
			case 10:
				_localctx = new VarDeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(172);
				variableDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
